# disco

./: .gitignore  CMakeLists.txt  README.md
apps/blinky/: CMakeLists.txt  README.md
apps/blinky/include/: blinky.h
apps/blinky/src/: blinky.c
linker/: stm32f769.ld
scripts/: blinky.py
startup/: startup_stm32f769xx.s
